archive/test/test_run_log.txt
Test dir: C:\Users\Franz\OneDrive\01_Promotion\01 Data\new-pipeline\src\meningioma_ftir_pipeline\test
Pipeline dir: C:\Users\Franz\OneDrive\01_Promotion\01 Data\new-pipeline\src
Verifying data files...
Training set: 14 samples
Test set: 6 samples
Wavenumbers: 441 points
[2025-10-21 08:01:35] === MATLAB VERSION INFO ===
[2025-10-21 08:01:36] Bioinformatics Toolbox Version 24.2
[2025-10-21 08:01:36] Data Acquisition Toolbox Version 24.2
[2025-10-21 08:01:36] Deep Learning Toolbox Version 24.2
[2025-10-21 08:01:36] Image Processing Toolbox Version 24.2
[2025-10-21 08:01:36] MATLAB Version 24.2
[2025-10-21 08:01:36] MATLAB Coder Version 24.2
[2025-10-21 08:01:36] MATLAB Compiler Version 24.2
[2025-10-21 08:01:36] Medical Imaging Toolbox Version 24.2
[2025-10-21 08:01:36] Optimization Toolbox Version 24.2
[2025-10-21 08:01:36] Parallel Computing Toolbox Version 24.2
[2025-10-21 08:01:36] Signal Processing Toolbox Version 24.2
[2025-10-21 08:01:36] Statistics and Machine Learning Toolbox Version 24.2
[2025-10-21 08:01:36] ========================
[2025-10-21 08:01:36] Starting pipeline execution with test configuration
[2025-10-21 08:01:36] Starting Phase 0: Quality Control
Loading data...
Processing training set...
Debug - Sample 1, Spectrum 1:
Signal: 0.1324, Noise: 0.0002, SNR: 597.0585
Debug - Sample 1: Max absorbance: 0.1375
Debug - Sample 1: Baseline SD: 0.0013
Debug - Sample 1: Peak ratio: 1.2482
Training set processing complete.
Processing test set...
Debug - Sample 1, Spectrum 1:
Signal: 0.1740, Noise: 0.0014, SNR: 121.6123
Debug - Sample 1: Max absorbance: 0.1789
Debug - Sample 1: Baseline SD: 0.0015
Debug - Sample 1: Peak ratio: 1.8356
Test set processing complete.
[2025-10-21 08:01:42] Starting Phase 1: Data Loading
Loading raw data...
Loading QC results...
Processing training set...
Processing test set...
Creating analysis-ready datasets...
DEBUG: y_train class: categorical
DEBUG: y_train is categorical with 3 unique values
DEBUG: y_train categories: WHO-1, WHO-2, WHO-3
DEBUG: trainingData.y field type: double
DEBUG: trainingData has y field

Dataset dimensions after QC:
Training set: 14 samples × 441 wavenumbers
Test set: 6 samples × 441 wavenumbers

Class distribution:
Training WHO-1: 7, WHO-3: 7
Test WHO-1: 3, WHO-3: 3
Saving processed data...
Data preparation complete.
[2025-10-21 08:01:45] Starting Phase 2: Feature Selection
Loading preprocessed data...
DEBUG: Fields in trainingData: X y probe_ids probe_table 
Loading preprocessed data...
DEBUG: trainingData.y class: double
DEBUG: trainingData.y size: [[14 1]]
Computing PCA on training data...
Selected 4 PCs explaining 97.2% variance
DEBUG: WHO-1 samples: 7, WHO-3 samples: 7
[2025-10-21 08:01:48] Starting Phase 3: Cross-Validation

===== ERROR OCCURRED =====
Error message: Error: File: C:\Users\Franz\OneDrive\01_Promotion\01 Data\new-pipeline\src\meningioma_ftir_pipeline\run_cross_validation.m Line: 259 Column: 5
Illegal use of reserved keyword "catch".
Function: run_pipeline_test_simplified, Line: 71

Latest results directory: C:\Users\Franz\OneDrive\01_Promotion\01 Data\new-pipeline\src\meningioma_ftir_pipeline\test\results\run_20251021_014852
  .
  ..
  pipeline_log.txt
  preprocessed_data.mat
  qc
Error: File: C:\Users\Franz\OneDrive\01_Promotion\01 Data\new-pipeline\src\meningioma_ftir_pipeline\run_cross_validation.m Line: 259 Column: 5
Illegal use of reserved keyword "catch".

Error in run_pipeline_test_simplified (line 71)
        cv_results = run_cross_validation(cfg);
                     ^^^^^^^^^^^^^^^^^^^^^^^^^
